# YAHAP

./: .gitmodules  CMakeLists.txt  README.md
examples/esp32/: .clangd  .gitignore  CMakeLists.txt  sdkconfig.defaults
examples/esp32-ip/: .clangd  CMakeLists.txt  sdkconfig.defaults
examples/esp32-ip/components/hap_wrapper/: CMakeLists.txt
examples/esp32-ip/main/: CMakeLists.txt  main.cpp
examples/esp32/components/hap_wrapper/: CMakeLists.txt  idf_component.yml
examples/esp32/main/: CMakeLists.txt  Esp32Ble.cpp  Esp32Ble.hpp  Esp32Crypto.cpp  Esp32Platform.cpp  Esp32Platform.hpp  idf_component.yml  main.cpp
examples/linux/: .gitignore  CMakeLists.txt  README.md
examples/linux/include/: LinuxCrypto.hpp  LinuxNetwork.hpp  LinuxStorage.hpp  LinuxSystem.hpp
examples/linux/src/: LinuxCrypto.cpp  LinuxNetwork.cpp  main.cpp
include/hap/: AccessoryServer.hpp  HAP.hpp
include/hap/common/: Result.hpp  TaskScheduler.hpp
include/hap/core/: Accessory.hpp  AttributeDatabase.hpp  Characteristic.hpp  CharacteristicFinder.hpp  CharacteristicSerializer.hpp  HAPStatus.hpp  HAPValidation.hpp  IIDManager.hpp  Service.hpp  TLV8.hpp
include/hap/pairing/: PairSetup.hpp  PairVerify.hpp  TLVTypes.hpp
include/hap/platform/: Ble.hpp  Crypto.hpp  CryptoSRP.hpp  Network.hpp  Storage.hpp  System.hpp
include/hap/transport/: AccessoryEndpoints.hpp  BleTransport.hpp  ConnectionContext.hpp  HTTP.hpp  PairingEndpoints.hpp  Router.hpp  SecureSession.hpp
include/hap/transport/ble/: BleSessionManager.hpp  BleTlvBuilder.hpp  HapPdu.hpp
include/hap/types/: CharacteristicTypes.hpp  ServiceTypes.hpp
src/: AccessoryServer.cpp  hap.cpp
src/common/: TaskScheduler.cpp
src/core/: AttributeDatabaseJSON.cpp  CharacteristicFinder.cpp  CharacteristicSerializer.cpp  IIDManager.cpp  TLV8.cpp
src/pairing/: PairSetup.cpp  PairVerify.cpp
src/platform/: Ble.cpp
src/transport/: AccessoryEndpoints.cpp  BleTransport.cpp  ConnectionContext.cpp  HTTP.cpp  PairingEndpoints.cpp  Router.cpp  SecureSession.cpp
src/transport/ble/: BleSessionManager.cpp  BleTlvBuilder.cpp  HapPdu.cpp
src/types/: CharacteristicTypes.cpp  ServiceTypes.cpp
tests/: BleTransportTest.cpp  CMakeLists.txt  HAPValidationTest.cpp  HTTPTest.cpp  JSONTest.cpp  TLV8Test.cpp  VerifyArchitecture.cpp
